style.css
@charset "utf-8";

/*Fonts*/
@font-face {
    font-family: 'JetBrains Mono';
    src: url('assets/fonts/JetBrainsMono-Bold.woff2') format('woff2');
    font-weight: 700;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('assets/fonts/JetBrainsMono-ExtraBold.woff2') format('woff2');
    font-weight: 800;
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url('assets/fonts/JetBrainsMono-SemiBoldItalic.woff2') format('woff2');
    font-weight: 600;
    font-style: italic;
}

@font-face {
    font-family: 'Inter';
    src: url('assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
}

@font-face {
    font-family: 'Inter';
    src: url('assets/fonts/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
    font-style: italic;
}

/*Body*/
body {
    background-color: rgb(4, 5, 15);
    font-family: "Inter", sans-serif;
    line-height: 1.6;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* PRINCIPAL CONTAINER */
.container {
    width: 90%;
    max-width: 1100px;
    margin: auto;
}

/* HEADER */
.header {
    display: flex;
    justify-content: space-between;
    background-color: rgb(19, 21, 37);
    padding: 30px;
    align-items: center;
    gap: 20px;
    flex-wrap: wrap;
    margin-top: 30px;
    border: 5px solid rgb(32, 226, 200);
    border-radius: 10px;
    box-shadow: 0 0 15px rgba(32, 226, 200, 0.25);
}

.header-text {
    flex: 1;
}

#name {
    font-family: "JetBrains Mono", monospace;
    font-weight: 800;
    font-size: 50px;
    color: rgb(245, 245, 245);
    padding: 10px;
    margin-top: 5px;
}

/*PROFESION ANIMATION*/
#profession {
    font-family: "JetBrains Mono", monospace;
    font-style: italic;
    font-weight: 600;
    font-size: 25px;
    color: rgb(245, 245, 245);
    padding: 10px;
    margin-top: -40px;
}

#profession::after {
    content: "_";
    animation: blink 0.6s infinite;
}

@keyframes blink {
    50% { opacity: 0; }
}

/*LINKS ICONS*/
#links {
    display: flex;
    align-items: center;
    gap: 12px;
    padding: 8px;
    margin-top: 10px;
    width: 30%;
}

.linksicons {
    width: 35px;
    height: 35px;
    margin-right: 10px;
    margin-left: 10px;
}

a, .linksicons {
    transition: all 0.3s ease;
}

.linksicons:hover {
    transform: scale(1.1);
}

/*DRAG KILLER*/
img {
    -webkit-user-drag: none;
    user-select: none;   
}

/*PROFILE PICTURE*/
#photo {
    width: 220px;
    max-width: 100%; 
    height: auto;
    border-radius: 5px;
}

/* TITLES */
.titles {
    font-family: "JetBrains Mono", monospace;
    font-weight: 600;
    text-align: center;
    margin: 30px 0;
    color: rgb(245, 245, 245);
    background: rgb(19, 21, 37);
    padding: 10px;
}

.subtitles{
    font-family: "JetBrains Mono", monospace;
    font-weight: 600;
    text-align: center;
    padding: 15px;
    border: 2px solid rgb(101, 243, 120);
    border-radius: 10px;
}

.project_name {
    font-family: "JetBrains Mono", monospace;
    font-weight: 600;
    font-size: 22px;
}

.names {
    font-family: "Inter", sans-serif;
    font-style: italic;
    font-size: 18px;
}

/* TWO COLUMNS */
.two-columns {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}

.two-columns > div {
    flex: 1;
    min-width: 300px;
}

/* THREE COLUMNS */
.three-columns {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}

.three-columns p {
    flex: 1;
    min-width: 250px;
}

/* TEXT BLOCKS */
.academic_islands,
.certifications_islands {
    padding: 10px;
    border-bottom: 5px solid;
}

.skills {
    text-align:justify;
    padding-left: 50px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 5px solid;  
}

#about, #info,
.projects {
    text-align: justify;
    padding: 15px;
    border-bottom: 5px solid;
}

.generic {
    background-color: black;
    color: rgb(245, 245, 245);
    border-radius: 5px;
}

/* Section Colors */
.skills { border-color: rgb(147, 112, 216); }
.projects { border: 5px solid rgb(0, 250, 154); 
            box-shadow: 0 0 10px rgba(0, 255, 127, 0.2); }
.academic_islands { border-color: rgb(72, 209, 204); }
.certifications_islands { border-color: rgb(60, 179, 113); }
#about { border-color: rgb(186, 85, 211); }
#info { border-color: rgb(95, 158, 160); }

/*CONTACT COPY*/
.copy {
    cursor: pointer;
    transition: 0.2s;
}

.copy:hover {
    color: rgb(95, 158, 160);
}

/* HR */
hr {
    margin: 40px 0;
    height: 5px;
    background-color: rgb(255, 255, 255);
    border: none;
}

/* FOOTER */
footer {
    font-weight: 600;
    font-family: "JetBrains Mono", monospace;
    text-align: center;
    color: rgb(245, 245, 245);
    margin: 30px 0;
}

